# mcp_server

./: README.md  main.py  mcp_demo.py  meeting_mcp.py  pyproject.toml  swapnil_mcp.py
.cursor/: environment.json
